add document for isolate level

--- a/test/pom.xml
+++ b/test/pom.xml
@@ -44,6 +44,13 @@
             <version>1.0.7</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.27</version>
+        </dependency>
+
 
     </dependencies>
 
