--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>simple-rpc</module>
         <module>common</module>
         <module>test</module>
+        <module>customer</module>
     </modules>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
