build pipeline and request

--- a/customer/src/main/resources/customer.properties
+++ b/customer/src/main/resources/customer.properties
@@ -5,3 +5,5 @@ jdbc.customer.user=root
 jdbc.customer.password=anhdem96
 jdbc.customer.max_pool_size=6
 jdbc.customer.url=jdbc:mysql://${jdbc.customer.host}/customer?useUnicode=true&characterEncoding=utf8
+
+snapshot.customer.step=1
